# schema-tools

./: .justfile  .rustfmt.toml  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/commands/: chain.rs  mod.rs
crates/cli/src/commands/process/: mod.rs
crates/schematools/: Cargo.toml
crates/schematools/src/: tools.rs
crates/schematools/src/codegen/: filters.rs  templates.rs
crates/schematools/src/codegen/jsonschema/: additionalproperties.rs  allof.rs  const_.rs  items.rs  mod.rs  patternproperties.rs  properties.rs  types.rs
crates/schematools/src/codegen/jsonschema/anyoneof/: mod.rs
crates/schematools/src/codegen/openapi/: endpoint.rs  mod.rs  parameters.rs  requestbody.rs  responses.rs
crates/schematools/src/process/: dereference.rs  flatten_allof.rs  merge_allof.rs  mod.rs
crates/schematools/src/process/fixtures/: merge_soft_complex_expected.json  merge_soft_complex_input.json  merge_soft_double_expected.json  merge_soft_double_input.json  merge_soft_propsonly_expected.json  merge_soft_propsonly_input.json  merge_soft_single_expected.json  merge_soft_single_input.json
