[package]
name = "schematools-cli"
description = "Tools for codegen, preprocessing and validation of json-schema and openapi spec"
edition = "2021"
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["codegen", "git2", "http", "json-patch", "semver"]
codegen = ["schematools/codegen"]
git2 = ["schematools/git2"]
http = ["schematools/http"]
json-patch = ["schematools/json-patch"]
semver = ["schematools/semver"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
sha2 = "0.10"

schematools = { version = "0.20.1", path = "../schematools" }

[lints.rust]
unsafe_code = { level = "deny", priority = 1 }
future_incompatible = { level = "deny", priority = 2 }
trivial_casts = { level = "warn", priority = 3 }
rust_2018_idioms = { level = "warn", priority = 4 }

[lints.clippy]
unwrap_used = "warn"
